# travel_genie

./: .env.example  .gitignore  AGENT_FIXED.md  ALTERNATIVE_OPTIONS_FEATURE.md  APPLICATION_RUNNING.md  ARCHITECTURE.md  CHATGPT_INTERFACE.md  COMPLETE_DESTINATION_FIX_SUMMARY.md  COMPLETE_SETUP.md  COMPLETE_TEST_RESULTS.md  CURRENT_STATUS.md  DESTINATION_FIX_SUMMARY.md  DESTINATION_SPECIFIC_WEATHER_FIX.md  DESTINATION_SUPPORT.md  DUPLICATE_TEXT_FIX.md  FINAL_FIXES_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FIXES_APPLIED.md  FLIGHT_DURATION_FIX.md  FRONTEND_REFRESH_INSTRUCTIONS.md  FRONTEND_SETUP.md  ICON_UPDATE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INDIA_CITIES_GUIDE.md  MULTI_DESTINATION_COMPARISON_FIX.md  NO_DEFAULT_DESTINATION_FIX.md  QUICKSTART.md  README.md  RESTART_SERVERS.md  RESTART_SERVERS_GUIDE.md  RUN_TRAVEL_GENIE.md  START_CHATGPT_UI.md  START_HERE.md  SYSTEM_READY.md  TESTING.md  TESTING_GUIDE.md  TESTS_SUMMARY.md  TOP_OPTIONS_FEATURE.md  (+19 more)
agent/: __init__.py  agent.py  coordinator.py
core/: __init__.py  analysis.py  models.py  scoring.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
tests/: __init__.py  conftest.py  test_core_analysis.py  test_core_models.py  test_tools.py
tests/backend/: __init__.py  manual_destination_output.py  test_agent.py  test_api_server.py  test_bangalore_query.py  test_coordinator.py  test_core_scoring.py  test_destination_specific.py  (+5 more)
tools/: __init__.py  flights.py  hotels.py  server.py  user_profile.py  weather.py
(+34 files in other folders)
